--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ nexusUsername=admin
 nexusPassword=admin123
 
 springBootVersion=2.0.1.RELEASE
-springCloudVersion=Finchley.RELEASE
+springCloudVersion=Finchley.SR1
 
 #jdbc-link
 jdbclinkVersion=1.0.60
