--- a/my-channel-ngx-callback/build.gradle
+++ b/my-channel-ngx-callback/build.gradle
@@ -2,8 +2,8 @@
 	
 		repositories {
 			maven {url "${nexusPublicUrl}"}
-			maven {url "https://plugins.gradle.org/m2/"}
-			mavenLocal()
+			//maven {url "https://plugins.gradle.org/m2/"}
+			//mavenLocal()
 		}
 		
 		dependencies {
@@ -26,6 +26,8 @@
 		// https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder
 		compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '5.2'
 		
+		// https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
+		compile group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.1.8.RELEASE'
 	
 		compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	
